--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Times New Roman', Times, serif;
     box-sizing: border-box;
     scrollbar-width: none;
     -ms-overflow-style: none;
@@ -11,7 +12,6 @@
     justify-content: center;
     height: 100vh;
     background-color: #dedddd;
-    font-family: Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #333;
@@ -32,4 +32,74 @@ textarea {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
     background-color: #f5f5f5;
     padding: 20px;
+}
+
+#translated_content {
+    margin-top: 25px;
+    width: 370px;
+    height: 170px;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+    background-color: #f5f5f5;
+    padding: 20px;
+}
+
+button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: #f5f5f5;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+    color: #333;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #dedddd;
+}
+
+button:active {
+    transform: scale(0.95);
+}
+
+.swal2-popup {
+    border-radius: 30px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+    font-size: 14px;
+}
+.swal2-popup .swal2-title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    font-style: normal;
+}
+
+.swal2-popup .swal2-content {
+    font-size: 14px;
+    color: #333;
+    font-style: normal;
+}
+
+.swal2-popup .swal2-confirm {
+    background-color: #f5f5f5;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+    font-size: 14px;
+    font-weight: bold;
+    color: #333;
+    font-style: normal;
+    border-radius: 20px;
+    transition: background-color 0.3s ease;
+}
+
+.swal2-popup .swal2-confirm:hover {
+    background-color: #dedddd;
+}
+
+.swal2-popup .swal2-confirm:active {
+    transform: scale(0.95);
 }
