--- a/style.css
+++ b/style.css
@@ -67,25 +67,25 @@ button:active {
     transform: scale(0.95);
 }
 
-.swal2-popup {
+body .swal2-popup {
     border-radius: 30px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
     font-size: 14px;
 }
-.swal2-popup .swal2-title {
+body .swal2-popup .swal2-title {
     font-size: 18px;
     font-weight: bold;
     color: #333;
     font-style: normal;
 }
 
-.swal2-popup .swal2-content {
+body .swal2-popup .swal2-content {
     font-size: 14px;
     color: #333;
     font-style: normal;
 }
 
-.swal2-popup .swal2-confirm {
+body .swal2-popup .swal2-confirm {
     background-color: #f5f5f5;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
     font-size: 14px;
@@ -96,7 +96,7 @@ button:active {
     transition: background-color 0.3s ease;
 }
 
-.swal2-popup .swal2-confirm:hover {
+body.swal2-popup .swal2-confirm:hover {
     background-color: #dedddd;
 }
 
