--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@
     -ms-overflow-style: none;
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+
+.VIpgJd-ZVi9od-LgbsSe {
+    display: none;
+}
+
+img {
+    margin-top: 10px;
+    width: 18px;
+    height: 18px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -32,6 +46,7 @@ textarea {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
     background-color: #f5f5f5;
     padding: 20px;
+    text-align: center;
 }
 
 #translated_content {
@@ -46,17 +61,26 @@ textarea {
 }
 
 button {
-    margin-top: 20px;
-    padding: 10px 20px;
+    margin-top: 25px;
+    padding: 6px 10px ;
     border-radius: 20px;
     border: none;
     background-color: #f5f5f5;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
     cursor: pointer;
-    font-size: 14px;
+    font-size: 14px ;
     font-weight: bold;
     color: #333;
     transition: background-color 0.3s ease;
+}
+
+button:focus {
+    outline: none;
+}
+
+button img {
+    margin-right: 5px;
+    margin-top: 2px;
 }
 
 button:hover {
@@ -64,7 +88,7 @@ button:hover {
 }
 
 button:active {
-    transform: scale(0.95);
+    transform: scale(0.90);
 }
 
 body .swal2-popup {
@@ -102,4 +126,38 @@ body.swal2-popup .swal2-confirm:hover {
 
 body .swal2-popup .swal2-confirm:active {
     transform: scale(0.95);
+}
+
+#google_translate_element {
+    background-color: #f5f5f5;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+    padding: 6px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #333;
+    font-style: normal;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 30px;
+    margin-bottom: 10px;
+}
+
+#google_translate_element:hover {
+    background-color: #dedddd;
+}
+
+#google_translate_element:active {
+    transform: scale(0.95);
+}
+
+@media (max-width: 600px) {
+    .container {
+        width: 96%;
+    }
+
+    textarea, #translated_content {
+        width: 100%;
+    }
+
 }
